[gd_scene load_steps=2 format=2]

[ext_resource path="res://Global/Login/Authentication.gd" type="Script" id=1]

[node name="Authentication" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 556.357
margin_top = 29.0448
margin_right = 756.357
margin_bottom = 210.045
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 31.0
text = "                      Login
"

[node name="Nick" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 200.0
margin_bottom = 59.0

[node name="Label" type="Label" parent="VBoxContainer/Nick"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
text = "Nick         "

[node name="NickInput" type="LineEdit" parent="VBoxContainer/Nick"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )

[node name="Pass" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 200.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="VBoxContainer/Pass"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
text = "Password "

[node name="PassInput" type="LineEdit" parent="VBoxContainer/Pass"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
secret = true
selecting_enabled = false

[node name="IP" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 91.0
margin_right = 200.0
margin_bottom = 117.0

[node name="Label" type="Label" parent="VBoxContainer/IP"]
margin_top = 6.0
margin_right = 65.0
margin_bottom = 20.0
text = "Ip             "

[node name="IpInput" type="LineEdit" parent="VBoxContainer/IP"]
margin_left = 69.0
margin_right = 199.0
margin_bottom = 26.0
rect_min_size = Vector2( 130, 0 )
text = "25.6.240.238"
clear_button_enabled = true

[node name="Login" type="Button" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 200.0
margin_bottom = 141.0
text = "Login"

[node name="Register" type="Button" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 200.0
margin_bottom = 165.0
text = "Register"

[node name="Message" type="Label" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 200.0
margin_bottom = 183.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 187.0
margin_right = 200.0
margin_bottom = 211.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 171.0
margin_bottom = 19.0
text = "Remember Credentials      "

[node name="RememberMe" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 175.0
margin_right = 199.0
margin_bottom = 24.0
align = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="VBoxContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RememberMe" to="." method="_on_RememberMe_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
